# gpo

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs
src/evolutionary/: genetic_algorithm.rs  mod.rs
