[package]
name = "gpo"
authors = ["Glenn Wallace glennw-coding@proton.me"]
version = "0.0.1"
edition = "2024"
description = "A general-purpose population-based optimization library"
keywords = ["optimization", "algorithm", "particle", "swarm", "evolutionary"]
categories = ["algorithms", "simulation"]
license = "MIT"
repository = "https://github.com/glennw-mt/gpo"

[dependencies]
